# CropGnosis

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: test.yml
apps/authorization/: admin.py  apps.py  managers.py  models.py  signals.py  tests.py  urls.py
apps/authorization/migrations/: 0001_initial.py  0002_initial.py  0003_remove_planfeaturesthrough_base_subscription_and_more.py  0003_rename_is_farm_staff_accounts_is_farmer_staff_and_more.py  0004_alter_accounts_managers_accounts_is_admin.py  0005_alter_accounts_is_active_alter_accounts_is_admin_and_more.py  0006_alter_accounts_is_farmer_staff.py  0007_alter_address_account.py  0008_address_remark.py  0009_remove_address_remark_address_stripe_cus_id.py  0010_alter_planfeaturesthrough_feature_type_and_more.py
apps/authorization/serializer/: customer_serializer.py  mentor_serializer.py
apps/authorization/views/: customer_views.py  mentor_view.py
apps/common/: serializers.py  urls.py  utils.py  views.py
apps/common/utils/: email.py  exceptions.py  util_methods.py
apps/subscription/: admin.py  models.py  payments.py  urls.py
apps/subscription/migrations/: 0001_initial.py  0002_accountsubscription_mentorbasesubscriptionplans_and_more.py  0002_remove_paymenttransactions_mentor_and_more.py  0003_alter_paymenttransactions_invoice_pdf_and_more.py  0004_essentialfeatures_periodicity_and_more.py  0005_alter_mentorbasesubscriptionplans_periodicity.py
config/: custom_render.py  settings.py  urls.py
templates/: checkout.html  mentor_registration_success.html  user_registration_success.html
(+5 files in other folders)
